test/Fail/Issue6173/A.agda
-- This module is intentionally left blank.
